--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas API peli</title>
-    <p>testi</p>
 </head>
 <body>
-    
+    <canvas id="canvas" width="600" height="500"></canvas>
 </body>
 </html>
