--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Matopeli</title>
 </head>
 <body>
+    <h1>Matopeli</h1>
     <canvas id="canvas" width="600" height="500"></canvas>
+    
 </body>
 </html>
