--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Matopeli</title>
 </head>
-<body>
+<body onload="checkSupported();">
     <h1>Matopeli</h1>
     <canvas id="canvas" width="600" height="500"></canvas>
     
