--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Matopeli</title>
 </head>
+
 <body onload="checkSupported();">
-    <h1>Matopeli</h1>
-    <canvas id="canvas" width="600" height="500"></canvas>
     
+    <section id="content">
+        <h1>Matopeli</h1>
+        <canvas id="canvas" width="600" height="500"></canvas>
+        <button id="pelinappi" type="button" onclick="pelaa()" style="display:block">Pelaa</button>
+    </section>
+
 </body>
+
 </html>
