--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="pelinappi" type="button" onclick="pelaa()" style="display:block">Pelaa</button>
     </section>
 
+    <script src="main.js"></script>
 </body>
 
 </html>
