--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     
     <section id="content">
         <h1>Matopeli</h1>
-        <canvas id="canvas" width="600" height="500"></canvas>
+        <canvas id="canvas" width="800" height="600"></canvas>
+        <div id="aloitus">
+            <h2>Tervetuloa pelaamaan matopeliä!</h2>
+            <h2>Peli on Canvas API ryhmäprojekti.</h2>
+            <h2>Tekijät: Juho Riipinen ja Laura Gynther</h2>
+        </div>
         <button id="pelinappi" type="button" onclick="pelaa()" style="display:block">Pelaa</button>
     </section>
 
