--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <h2>Peli on Canvas API ryhmäprojekti.</h2>
             <h2>Tekijät: Juho Riipinen ja Laura Gynther</h2>
         </div>
+        <div id="lopetus" style="display:none">
+            <h2>Peli ohi!</h2>
+            <h2>Keräsit <span id="pisteet"></span> pistettä.</h2>
+        </div>
         <button id="pelinappi" type="button" onclick="pelaa()" style="display:block">Pelaa</button>
     </section>
 
