--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Matopeli</title>
 </head>
 
-<body onload="checkSupported()">
+<body >
     
     <section id="content">
         <h1>Matopeli</h1>
