--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <section id="content">
         <h1>Matopeli</h1>
-        <canvas id="canvas" width="800" height="600"></canvas>
+        <canvas id="canvas" width="800" height="600" style="display:none"></canvas>
         <div id="pisteruutu" style="display:none">Pisteet: <span id="pisteetNyt"></span></div>
         <div id="aloitus">
             <h2>Tervetuloa pelaamaan matopeliä!</h2>
