--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Matopeli🐍</title>
 </head>
 
-<body onload="checkSupported();">
+<body>
     
     <section id="content">
         <h1>Matopeli</h1>
