--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="content">
         <h1>Matopeli</h1>
         <canvas id="canvas" width="630" height="510" style="display:none"></canvas>
-        <div id="pisteruutu" style="display:none">Pisteet: <span id="pisteetNyt"></span></div>
+        <div id="pisteruutu" style="display:none">Pisteet: <span id="pisteetNyt">0</span></div>
         <div id="aloitus">
             <h2>Tervetuloa pelaamaan matopeliä!</h2>
             <h2>Peli on Canvas API ryhmäprojekti.</h2>
