--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="lopetus" style="display:none">
             <h2>Peli ohi!</h2>
             <h2>Keräsit <span id="pisteetLopussa"></span> pistettä.</h2>
+            <button type="button" id="pelaaUudelleen" onclick="location.reload()">Pelaa uudelleen</button>
         </div>
         <button id="pelinappi" type="button" onclick="pelaa()" style="display:block">Pelaa</button>
     </section>
